--- a/src/IvyFEMProtoApp/IvyFEMProtoApp/MainWindow.xaml
+++ b/src/IvyFEMProtoApp/IvyFEMProtoApp/MainWindow.xaml
@@ -8,12 +8,14 @@
         mc:Ignorable="d"
         Title="IvyFEMProtoApp" Height="350" Width="525" Loaded="Window_Loaded">
     <Grid>
-        <WrapPanel Margin="0,0,0,278">
+        <WrapPanel Margin="0,0,0,263">
             <Button x:Name="cad2DBtn" Content="Cad2D" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" RenderTransformOrigin="-0.04,0.15" Click="cad2DBtn_Click"/>
             <Button x:Name="coarseMesh2DBtn" Content="Coarse Mesh2D" Width="98" Click="coarseMesh2DBtn_Click"/>
             <Button x:Name="mesh2DBtn" Content="Mesh2D" Width="75" Click="mesh2DBtn_Click"/>
+            <Button x:Name="MatrixOperation" Content="Matrix Operation" Width="97" Click="MatrixOperation_Click"/>
+            <Button x:Name="waveguideBtn" Content="Waveguide" Width="75" Click="waveguideBtn_Click"/>
         </WrapPanel>
-        <WindowsFormsHost Margin="0,41,0,0">
+        <WindowsFormsHost Margin="0,56,0,0">
             <OpenTK:GLControl x:Name="glControl" Load="glControl_Load" Resize="glControl_Resize" Paint="glControl_Paint" MouseClick="glControl_MouseClick" KeyDown="glControl_KeyDown" KeyUp="glControl_KeyUp" MouseMove="glControl_MouseMove" MouseDown="glControl_MouseDown" MouseWheel="glControl_MouseWheel"/>
         </WindowsFormsHost>
     </Grid>
