--- a/src/IvyFEMProtoApp/IvyFEMProtoApp/MainWindow.xaml
+++ b/src/IvyFEMProtoApp/IvyFEMProtoApp/MainWindow.xaml
@@ -8,20 +8,32 @@
         mc:Ignorable="d"
         Title="IvyFEMProtoApp" Height="389" Width="500" Loaded="Window_Loaded">
     <Grid>
-        <WrapPanel Margin="0,0,0,300">
-            <Button x:Name="cad2DBtn" Content="Cad2D" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" RenderTransformOrigin="-0.04,0.15" Click="cad2DBtn_Click"/>
-            <Button x:Name="coarseMesh2DBtn" Content="Coarse Mesh2D" Width="98" Click="coarseMesh2DBtn_Click"/>
-            <Button x:Name="mesh2DBtn" Content="Mesh2D" Width="75" Click="mesh2DBtn_Click"/>
-            <Button x:Name="lapackBtn" Content="LAPACK" Width="74" Click="lapackBtn_Click"/>
-            <Button x:Name="lisBtn" Content="Lis" Width="75" Click="lisBtn_Click"/>
-            <Button x:Name="waveguideBtn" Content="Waveguide" Width="75" Click="waveguideBtn_Click"/>
-            <Button x:Name="elasticBtn" Content="Elastic" Width="75" Click="elasticBtn_Click"/>
-            <Button x:Name="saintVenantHyperelasticBtn" Content="Saint Venant" Width="91" Click="saintVenantHyperelasticBtn_Click"/>
-            <Button x:Name="elasticTDBtn" Content="Elastic Time Domain" Width="115" Click="elasticTDBtn_Click"/>
-            <Button x:Name="saintVenantHyperelasticTimeDomainBtn" Content="Saint Venant Time Domain" Width="156" Click="saintVenantHyperelasticTimeDomainBtn_Click"/>
-        </WrapPanel>
-        <WindowsFormsHost Margin="0,63,0,0">
-            <OpenTK:GLControl x:Name="glControl" Load="glControl_Load" Resize="glControl_Resize" Paint="glControl_Paint" MouseClick="glControl_MouseClick" KeyDown="glControl_KeyDown" KeyUp="glControl_KeyUp" MouseMove="glControl_MouseMove" MouseDown="glControl_MouseDown" MouseWheel="glControl_MouseWheel"/>
-        </WindowsFormsHost>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="0*"/>
+        </Grid.ColumnDefinitions>
+        <DockPanel>
+            <Menu RenderTransformOrigin="0.501,-2.5" DockPanel.Dock="Top">
+                <MenuItem Header="Examples">
+                    <MenuItem Header="Cad2D" Click="cad2DBtn_Click"/>
+                    <MenuItem Header="Coare Mesh2D" Click="coarseMesh2DBtn_Click"/>
+                    <MenuItem Header="Mesh2D" Click="mesh2DBtn_Click"/>
+                    <MenuItem Header="LAPACK" Click="lapackBtn_Click"/>
+                    <MenuItem Header="Lis" Click="lisBtn_Click"/>
+                    <MenuItem Header="Waveguide" Click="waveguideBtn_Click"/>
+                    <MenuItem Header="Elastic" Click="elasticBtn_Click"/>
+                    <MenuItem Header="Elastic Time Domain" Click="elasticTDBtn_Click"/>
+                    <MenuItem Header="Saint Venant" Click="saintVenantHyperelasticBtn_Click"/>
+                    <MenuItem Header="Saint Venant Time Domain" Click="saintVenantHyperelasticTimeDomainBtn_Click"/>
+                    <MenuItem Header="Mooney-Rivlin" Click="mooneyRivlinHyperelasticBtn_Click"/>
+                    <MenuItem Header="Mooney-Rivlin Time Domain" Click="mooneyRivlinHyperelasticTDBtn_Click"/>
+                </MenuItem>
+            </Menu>
+            <Grid>
+                <WindowsFormsHost>
+                    <OpenTK:GLControl x:Name="glControl" Load="glControl_Load" Resize="glControl_Resize" Paint="glControl_Paint" MouseClick="glControl_MouseClick" KeyDown="glControl_KeyDown" KeyUp="glControl_KeyUp" MouseMove="glControl_MouseMove" MouseDown="glControl_MouseDown" MouseWheel="glControl_MouseWheel"/>
+                </WindowsFormsHost>
+            </Grid>
+        </DockPanel>
     </Grid>
 </Window>
