フォトニック結晶導波路　三角形格子＆エアホール型(TMモード) 60ベンド計算例追加

--- a/src/IvyFEMProtoApp/IvyFEMProtoApp/MainWindow.xaml
+++ b/src/IvyFEMProtoApp/IvyFEMProtoApp/MainWindow.xaml
@@ -78,7 +78,8 @@
                     <MenuItem Header="Waveguide" Click="waveguideBtn_Click"/>
                 </MenuItem>
                 <MenuItem Header="Photonic Crystal">
-                    <MenuItem Header="Waveguide" Click="pcWaveguideBtn_Click"/>
+                    <MenuItem Header="PC Waveguide(Square Lattice)" Click="squareLatticePCWaveguideBtn_Click"/>
+                    <MenuItem Header="PC Waveguide(Triangle Lattice)" Click="triangleLatticePCWaveguideBtn_Click"/>
                 </MenuItem>
                 <MenuItem Header="Fluid">
                     <MenuItem Header="Fluid(1)" Click="stdgFluid1Btn_Click"/>
